# ra-port

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux-build.yml
CODE/: AADATA.CPP  ADATA.CPP  AIRCRAFT.CPP  AIRCRAFT.H  ANIM.CPP  ANIM.H  AUDIO.CPP  BBDATA.CPP  BDATA.CPP  BUILDING.CPP  BUILDING.H  BULLET.CPP  BULLET.H  CDATA.CPP  CELL.CPP  CHEKLIST.CPP  CONQUER.CPP  COORD.CPP  DEFINES.H  DISPLAY.CPP  DISPLAY.H  EXTERNS.H  FACTORY.CPP  FACTORY.H  FIELD.CPP  FINDPATH.CPP  GETCPU.CPP  GLOBALS.CPP  HDATA.CPP  HOUSE.CPP  HOUSE.H  IDATA.CPP  INFANTRY.CPP  INFANTRY.H  INIT.CPP  KEY.CPP  LIST.H  ODATA.CPP  OPTIONS.CPP  OVERLAY.CPP  (+37 more)
PORT/ANDROID/src/: android_main.cpp
PORT/MAC/include/: android_touch_gesture.h  legacy_compiler_compat.h  mac_audio_stream.h  mac_sdl.h  mac_sdl_runtime.h  malloc.h  mobile_touch_gesture.h  windows.h
PORT/MAC/src/: dos_compat.cpp  mac_audio_stub.cpp  mac_sdl_runtime.cpp  mac_vqa.cpp  main.cpp
WIN32LIB/INCLUDE/: _FILE.H
WIN32LIB/PALETTE/: PALETTE.CPP  PALETTE.H
WIN32LIB/WSA/: WSA.CPP  wsa_file_format.h
WWFLAT32/FILE/: _FILE.H
WWFLAT32/PALETTE/: PALETTE.H
android/: settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/raport/redalert/: RedAlertActivity.java
cmake/: ra95_common.cmake
docs/superpowers/plans/: 2026-07-11-lp64-pr-integration.md
docs/superpowers/specs/: 2026-07-11-lp64-pr-integration-design.md
scripts/: build_android_debug.sh  create_casefold_include_overlay.sh  run_android_debug.sh  run_linux_dev.sh  smoke_linux_menu.sh
tests/: android_touch_gesture_test.cpp  audio_shim_test.cpp  coord_cell_test.cpp  dos_compat_test.cpp  mobile_touch_gesture_test.cpp  operator_new_null_test.cpp  run_script_tests.sh  save_description_test.cpp  trigger_width_test.cpp  vqa_decode_test.cpp  vqa_file_smoke_test.cpp
